test/zinc_source/compile_errors/callables/24_arrow_lambda_wrong_arity.zn
// expected-error: indirect call missing required argument 'y'
fn main() {
    f = (x, y) -> x + y
    print(f(1))
}
